style.css
body{
    margin: 0;
    /* font-family: 'Poppins', sans-serif; << old */
    font-family: 'Acme', sans-serif;
}
h1{
    font-size: 50px;
}
h2{
    font-size: 40px;
}
p{
    color: dimgray;
}
.orange-hightlight{
    color: orange;
}
.half-width{
    width: 40%;
    float: left;
    margin-left: 5%;
    padding-left: 2%;
}
.half-width img{
    width: 100%;
}
.top-banner{
    background-image:url("images/top-banner.png");
    background-repeat: no-repeat;
}
section{
    height: 500px;
    padding-bottom: 150px;
}
.link-button{
    text-decoration: none;
    /* background-image: linear-gradient(45deg,lightSalmon,tomato); << old*/
    background-image: linear-gradient(45deg,orange,tomato);
    padding:10px 20px;
    border-radius: 5px;
    color: white;
    font-weight: bold;
}
.dream-area{
    background-image: url("images/dream-bg.png");
    background-repeat: no-repeat;
    background-position: right;
}
.single-experience{
    box-shadow: 10px 10px 40px gray;
    height: 80%;
    background-color: white;
}
.experience-area{
    background-image: url("images/exp-bg.png");
    background-repeat: no-repeat;
}
#full-stack{
    border-left: 7px solid;
    border-image:linear-gradient(180deg,yellow,orange);
    border-image-slice: 1;
}
#baby-web{
    border-left: 7px solid;
    border-image:linear-gradient(180deg,blue,cyan);
    border-image-slice: 1;
}
footer p{
    text-align: center;
    font-size: 12px;
}

